--- a/form.html
+++ b/form.html
@@ -2,16 +2,16 @@
 {{if .Success}}
     <h1>Thanks for your message!</h1>
 {{else}}
-    <h1>Contact</h1>
+    <h1>Create new seller</h1>
     <form method="POST">
         <label>Name:</label><br />
-        <input type="text" name="name"><br />
+        <input type="text" name="Name"><br />
         <label>Image link:</label><br />
-        <input type="text" name="img"><br />
+        <input type="text" name="Image"><br />
         <label>Phone:</label><br />
-        <input type="text" name="phone"><br />
+        <input type="text" name="Phone"><br />
         <label>Location:</label><br />
-        <input type="text" name="location"><br />
+        <input type="text" name="Location"><br />
         <input type="submit">
     </form>
 {{end}}
