--- a/form.html
+++ b/form.html
@@ -10,8 +10,11 @@
         <input type="text" name="Image"><br />
         <label>Phone:</label><br />
         <input type="text" name="Phone"><br />
+        <label>Email:</label><br />
+        <input type="text" name="Email"><br />
         <label>Location:</label><br />
         <input type="text" name="Location"><br />
         <input type="submit">
     </form>
+    <h1>{{.error}}</h1>
 {{end}}
