Changed name to id and updated code to use Logo

--- a/form.html
+++ b/form.html
@@ -6,6 +6,8 @@
     <form method="POST">
         <label>Name:</label><br />
         <input type="text" name="Name"><br />
+        <label>Logo image link:</label><br />
+        <input type="text" name="Logo"><br />
         <label>Image link:</label><br />
         <input type="text" name="Image"><br />
         <label>Phone:</label><br />
