working version of map

--- a/display.html
+++ b/display.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="en">
 <h1>{{.Name}}</h1>
 <ul>
     <li>{{.Logo}}</li>
@@ -7,3 +9,97 @@
     {{range .Schedule}}
     <li>{{.Date}}: {{.StartTime}} - {{.EndTime}}{{end}}
 </ul>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/css/ol.css" type="text/css">
+    <style>
+        .map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/build/ol.js"></script>
+    <title>OpenLayers example</title>
+</head>
+<body>
+<h2>My Map</h2>
+<div id="map" class="map" style="width: 600px; height: 400px;"></div>
+<div id="popup" class="ol-popup">
+    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+    <div id="popup-content"></div>
+</div>
+<script type="text/javascript">
+    var iconFeature = new ol.Feature({
+        geometry: new ol.geom.Point([-122.4174374, 37.7753160]),
+        name: 'Null Island',
+        population: 4000,
+        rainfall: 500
+    });
+
+    var iconStyle = new ol.style.Style({
+        image: new ol.style.Icon({
+            anchor: [0.5, 46],
+            anchorXUnits: 'fraction',
+            anchorYUnits: 'pixels',
+            src: 'data/map_icon.png'
+        })
+    });
+
+    iconFeature.setStyle(iconStyle);
+
+    var map = new ol.Map({
+        target: 'map',
+        layers: [
+            new ol.layer.Tile({
+                source: new ol.source.OSM()
+            })
+        ],
+        view: new ol.View({
+            center: ol.proj.fromLonLat([-122.4174374, 37.7753160]),
+            zoom: 10
+        }),
+    });
+
+    var layer = new ol.layer.Vector({
+        source: new ol.source.Vector({
+            features: [
+                new ol.Feature({
+                    geometry: new ol.geom.Point(ol.proj.fromLonLat([-122.4174374, 37.7753160]))
+
+                })
+            ]
+        })
+    });
+    map.addLayer(layer);
+
+    var container = document.getElementById('popup');
+    var content = document.getElementById('popup-content');
+    var closer = document.getElementById('popup-closer');
+
+    var overlay = new ol.Overlay({
+        element: container,
+        autoPan: true,
+        autoPanAnimation: {
+            duration: 250
+        }
+    });
+    map.addOverlay(overlay);
+
+    closer.onclick = function() {
+        overlay.setPosition(undefined);
+        closer.blur();
+        return false;
+    };
+    map.on('singleclick', function (event) {
+        if (map.hasFeatureAtPixel(event.pixel) === true) {
+            var coordinate = event.coordinate;
+
+            content.innerHTML = '<b>Hello world!</b><br />I am a popup.';
+            overlay.setPosition(coordinate);
+        } else {
+            overlay.setPosition(undefined);
+            closer.blur();
+        }
+    });
+</script>
+</body>
+</html>
