--- a/display.html
+++ b/display.html
@@ -27,78 +27,53 @@
     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
     <div id="popup-content"></div>
 </div>
-<script type="text/javascript">
+<!--<script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>-->
+<script>
+    var lat = 42;
+    var lng = -75;
+
     var iconFeature = new ol.Feature({
-        geometry: new ol.geom.Point([-122.4174374, 37.7753160]),
-        name: 'Null Island',
+        geometry: new ol.geom.Point(ol.proj.transform([lng, lat], 'EPSG:4326', 'EPSG:3857')),
+        name: 'The icon',
         population: 4000,
         rainfall: 500
     });
 
     var iconStyle = new ol.style.Style({
-        image: new ol.style.Icon({
+        image: new ol.style.Icon( /** @type {olx.style.IconOptions} */ ({
             anchor: [0.5, 46],
             anchorXUnits: 'fraction',
             anchorYUnits: 'pixels',
-            src: 'data/map_icon.png'
-        })
+            src: 'https://openlayers.org/en/v4.6.5/examples/data/icon.png'
+        }))
     });
 
     iconFeature.setStyle(iconStyle);
 
+    var vectorSource = new ol.source.Vector({
+        features: [iconFeature]
+    });
+
+    var vectorLayer = new ol.layer.Vector({
+        source: vectorSource
+    });
+
+    var rasterLayer = new ol.layer.Tile({
+        source: new ol.source.OSM()
+    });
+
     var map = new ol.Map({
+        layers: [rasterLayer, vectorLayer],
         target: 'map',
-        layers: [
-            new ol.layer.Tile({
-                source: new ol.source.OSM()
-            })
-        ],
+        // controls: ol.control.defaults({
+        //     attributionOptions: {
+        //         collapsible: false
+        //     }
+        // }),
         view: new ol.View({
-            center: ol.proj.fromLonLat([-122.4174374, 37.7753160]),
-            zoom: 10
-        }),
-    });
-
-    var layer = new ol.layer.Vector({
-        source: new ol.source.Vector({
-            features: [
-                new ol.Feature({
-                    geometry: new ol.geom.Point(ol.proj.fromLonLat([-122.4174374, 37.7753160]))
-
-                })
-            ]
+            center: ol.proj.fromLonLat([lng, lat]),
+            zoom: 5
         })
-    });
-    map.addLayer(layer);
-
-    var container = document.getElementById('popup');
-    var content = document.getElementById('popup-content');
-    var closer = document.getElementById('popup-closer');
-
-    var overlay = new ol.Overlay({
-        element: container,
-        autoPan: true,
-        autoPanAnimation: {
-            duration: 250
-        }
-    });
-    map.addOverlay(overlay);
-
-    closer.onclick = function() {
-        overlay.setPosition(undefined);
-        closer.blur();
-        return false;
-    };
-    map.on('singleclick', function (event) {
-        if (map.hasFeatureAtPixel(event.pixel) === true) {
-            var coordinate = event.coordinate;
-
-            content.innerHTML = '<b>Hello world!</b><br />I am a popup.';
-            overlay.setPosition(coordinate);
-        } else {
-            overlay.setPosition(undefined);
-            closer.blur();
-        }
     });
 </script>
 </body>
