Added other parts of seller struct and set up schedule with database

--- a/form.html
+++ b/form.html
@@ -10,10 +10,106 @@
         <input type="text" name="Logo"><br />
         <label>Image link:</label><br />
         <input type="text" name="Image"><br />
+        <label>Second image link:</label><br />
+        <input type="text" name="Image_2"><br />
+        <label>Third Image link:</label><br />
+        <input type="text" name="Image_3"><br />
+        <label>Fourth Image link:</label><br />
+        <input type="text" name="Image_4"><br />
+        <label>Fifth Image link:</label><br />
+        <input type="text" name="Image_5"><br />
         <label>Phone:</label><br />
         <input type="text" name="Phone"><br />
         <label>Location:</label><br />
         <input type="text" name="Location"><br />
+        <label>Email:</label><br />
+        <input type="text" name="Email"><br />
+        <label>Twitter:</label><br />
+        <input type="text" name="Twitter"><br />
+        <label>Facebook:</label><br />
+        <input type="text" name="Facebook"><br />
+        <label>Instagram:</label><br />
+        <input type="text" name="Instagram"><br />
+        <label>Pinterest:</label><br />
+        <input type="text" name="Pinterest"><br />
+
+        <label>Open on Monday?:</label><br />
+        <input type="text" name="MonOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="MonLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="MonAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="MonStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="MonEndTime"><br />
+
+        <label>Open on Tuesday?:</label><br />
+        <input type="text" name="TueOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="TueLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="TueAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="TueStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="TueEndTime"><br />
+
+        <label>Open on Wednesday?:</label><br />
+        <input type="text" name="WedOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="WedLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="WedAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="WedStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="WedEndTime"><br />
+
+        <label>Open on Thurday?:</label><br />
+        <input type="text" name="ThuOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="ThuLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="ThuAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="ThuStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="ThuEndTime"><br />
+
+        <label>Open on Friday?:</label><br />
+        <input type="text" name="FriOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="FriLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="FriAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="FriStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="FriEndTime"><br />
+
+        <label>Open on Saturday?:</label><br />
+        <input type="text" name="SatOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="SatLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="SatAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="SatStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="SatEndTime"><br />
+
+        <label>Open on Sunday?:</label><br />
+        <input type="text" name="SunOpenStatus"><br />
+        <label>Location:</label><br />
+        <input type="text" name="SunLocation"><br />
+        <label>Address:</label><br />
+        <input type="text" name="SunAddress"><br />
+        <label>Start Time:</label><br />
+        <input type="text" name="SunStartTime"><br />
+        <label>End Time:</label><br />
+        <input type="text" name="SunEndTime"><br />
+
         <input type="submit">
     </form>
 {{end}}
